# Termal-conductivity-in-graphs

./: CMakeLists.txt  test.cpp
data/: input.json
include/: AnalyticalSolver.hpp  CMakeLists.txt  Controller.hpp  Graph.hpp  HeatTransferFacade.hpp  MyInclude.hpp  NumericalSolver.hpp  Solver.hpp
src/: AnalyticalSolver.cc  CMakeLists.txt  Graph.cc  Solver.cc
